--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="give_a_file_name">Please give a file name</string>
     <string name="sms_get_backup">All SMS gets back-up successfully.</string>
     <string name="select_sms_conversations">Select some SMS conversations.</string>
+    <string name="no_sms">No SMS</string>
 </resources>
