--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,9 @@
     <string name="sms_restore">SMS Restore</string>
     <string name="total_sms_">"Total SMS : "</string>
     <string name="restoring_wait">Restoring.. wait...</string>
-    <string name="restored_successfully">Restored successfully</string>
+    <string name="sms_restored_successfully"> SMS(s) restored successfully</string>
+    <string name="attention">Attention</string>
+    <string name="msg_app_default_message_permission">On Kitkat and above version only the default Message app can
+        write SMS, so to restore the backups this app need to be the default Message app. You can always change it in
+        the settings.</string>
 </resources>
