--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="backup_file_name">Backup File Name</string>
     <string name="file_name">File name</string>
     <string name="give_a_file_name">Please give a file name</string>
-    <string name="sms_get_backup">All SMS gets back-up successfully.</string>
+    <string name="sms_backup_successfully">Sms backup has completed successfully.</string>
     <string name="select_sms_conversations">Select some SMS conversations.</string>
     <string name="no_sms">No SMS</string>
     <string name="select_restore_type">Select Restore Type</string>
@@ -48,9 +48,20 @@
     <string name="sms_restore">SMS Restore</string>
     <string name="total_sms_">"Total SMS : "</string>
     <string name="restoring_wait">Restoring.. wait...</string>
-    <string name="sms_restored_successfully">SMS restored successfully</string>
+    <string name="sms_restored_successfully_msg">SMS have restored successfully. Now you can change the default Message
+        app from the Setting Screen. Would you like to open the Setting Screen ?</string>
     <string name="attention">Attention</string>
     <string name="msg_app_default_message_permission">On Kitkat and above version only the default Message app can
         write SMS, so to restore the backups this app need to be the default Message app. You can always change it in
         the settings.</string>
+    <string name="backup_file">Backup file</string>
+    <string name="backup_note">Backup note</string>
+    <string name="backup_sms_wait">Backup sms... wait...</string>
+    <string name="quick_options">Quick Options</string>
+    <string name="sms_restore_">SMS restore</string>
+    <string name="call_logs_restore">Call log restore</string>
+    <string name="contact_restore">Contact restore</string>
+    <string name="open_setting_ui">Open Setting</string>
+    <string name="restoring_sms_completed">Restoring SMS Completed</string>
+    <string name="select_some_backup_files">Please select some backup files.</string>
 </resources>
